---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=typeck"
    - "--stop-after=typeck"
    - panko/tests/cases/execute/char/test_prefixed_char_literal_types.c
---
success: true
exit_code: 0
----- stdout -----
(translation-unit
   (function-definition
      main~0 `fn() -> int`
      (compound-statement
         (expression (0 `int`))
         (expression (0 `int`))
         (expression (0 `int`))
         (expression (0 `int`)))))

----- stderr -----
